Assets/css/style.css
header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 50px;
    background-color: #3b5999;
    color: #ffffff;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-weight: 200;
  }

body {
  background-color: #fbfffb;
  color: #000000;
  padding: 0;
  margin: 0;
}

.aboutme {
  font-size: 22px;
  display: grid;
  place-items: center;
  align-content: center;
  min-height: 100vh;
  align-content: center;
}

.aboutme h1 {
  padding: 2%;
}

  nav ul {
    display: flex;
    justify-content: space-between;
    min-width: 300px;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  }

  nav a {
    color: #ffffff;
    font-weight: bold;
    text-decoration: none;
  }

  h1 {
    font-size: 200%
  }

